<resources>
    <string name="app_name">Optica-Technician Application</string>
    <string name="notifications">Notifications</string>
    <string name="accounts">Accounts</string>
    <string name="optica_technicians">Optica Technicians</string>
    <string name="orders">Orders</string>
    <string name="open_navigation">Open Navigation</string>
    <string name="close_navigation">Close Navigation</string>

    <string name="start_order_screen_actionbar_title">Start Order</string>
    <string name="scanner_screen_actionbar_title">Scan Order</string>
    <string name="notification_screen_actionbar_title">Orders</string>
    <string name="back_button">back button</string>
    <string name="order_id">Order id</string>
    <string name="scan">Scan</string>
    <string name="start_time">Start Time!</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="account">Account</string>
    <string name="launcher_icon">Launcher Icon</string>
    <string name="order_number_placeholder"># K345f56</string>
    <string name="stop_timer">Stop: 8:50</string>
    <string name="date_placeholder">03–29–2022</string>
    <string name="cleared">Cleared</string>
    <string name="start_timer">Start Timer</string>
    <string name="today">Today</string>
    <string name="order">Orders</string>
    <string name="timer_placeholder">00 : 00 : 00</string>
    <string name="stop">Stop</string>
    <string name="start">start: 8:00</string>
    <string name="_50_min">50 mins</string>
    <string name="name_placeholder">Hello</string>
    <string name="loginLabel">Login</string>
    <string name="login_as_admin">Login As Admin</string>
    <string name="username">Username</string>
    <string name="contentDesc">contentDesc</string>
    <string name="don_t_have_an_account_create_one">Don\'t have an Account? Create One</string>
    <string name="my_orders">My Orders</string>
    <string name="search_order">Search Order</string>
    <string name="start_order">Start Order</string>
    <string name="_34">34</string>
    <string name="scanned_order_number">Scanned Order number</string>
    <string name="order_no">Order No.</string>
    <string name="elapsed_time">ElapsedTime:</string>
    <string name="splashscreen">SplashScreen</string>
    <string name="optica_logo">Optica Logo</string>
    <string name="stop_time">StopTime</string>
    <string name="time_started">Time Started</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="email_address">Email Address</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account_already_login">Have an Account already? Login</string>
    <string name="name">Name</string>
    <string name="enter_username">Enter Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="you_have_no_orders">You have no Orders</string>

</resources>
