<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="180dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:id="@+id/navHeaderImage"
        android:contentDescription="@string/launcher_icon"
        android:src="@drawable/ic_launcher_background" />

    <LinearLayout
        android:layout_width="150dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginStart="15dp"
            android:textSize="17sp"
            android:textStyle="bold"
            android:id="@+id/name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/number"
            android:layout_marginTop="5dp"
            android:textStyle="italic"
            android:layout_marginStart="10dp"
            android:text="@string/optica_technicians"/>

    </LinearLayout>

</RelativeLayout>

























