<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:nestedScrollingEnabled="true"
    tools:context=".UI.Activities.StartOrderActivity"
    tools:ignore="SpUsage">

    <!--App Bar Layout-->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:menu="@menu/main_menu">

            <TextView
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="10dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/start_order"
                android:textColor="@color/dark_blue"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <!--Timer Activity Features-->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/orderIdTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa"
                android:text="@string/order_id"
                android:textColor="@color/dark_blue"
                android:textSize="14dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/orderNumberTextTxt"
                android:layout_width="220dp"
                android:layout_height="48dp"
                android:layout_below="@id/orderIdTxt"
                android:focusable="false"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/input_fields_background"
                android:gravity="center_vertical"
                android:hint="@string/scanned_order_number"
                android:inputType="number|text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="16dp"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/scanButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@id/orderIdTxt"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/orderNumberTextTxt"
                android:background="@drawable/btn_submit_background"
                android:fontFamily="@font/comfortaa"
                android:text="@string/scan"
                android:textAllCaps="false"
                android:textColor="@color/dark_blue"
                android:textSize="14dp"
                android:textStyle="bold" />

            <Chronometer
                android:id="@+id/chronometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/orderNumberTextTxt"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/OrderViewText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/chronometer"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="85dp"
                android:layout_marginTop="58dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/order_no"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/startTime"
                android:layout_marginTop="10dp"
                android:text="@string/date_placeholder"
                android:textColor="@color/dark_blue"
                android:textSize="14dp" />


            <TextView
                android:id="@+id/startTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/orderNumberTextTxt"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/start_time"
                android:textColor="@color/dark_blue"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/stopTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/orderNumberTextTxt"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/stop_time"
                android:textColor="@color/dark_blue"
                android:textSize="14dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/stop"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="29dp"
                android:background="@drawable/btn_cancel_background"
                android:fontFamily="@font/comfortaa"
                android:text="@string/stop"
                android:textAllCaps="false"
                android:textColor="@color/yellow"
                android:textSize="14dp"
                android:textStyle="bold"
                android:visibility="gone" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>