<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Activities.SplashScreen.StartActivity"
    tools:ignore="SpUsage">

    <ImageView
        android:id="@+id/iconLogo"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/optica_logo"
        android:src="@drawable/optica_logo_1"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/optica_logo"
            android:src="@drawable/optica_logo_1" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_cancel_background"
            android:fontFamily="@font/comfortaa"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/yellow"
            android:textSize="14dp"
            android:textStyle="bold" />

        <androidx.legacy.widget.Space
            android:layout_width="0dp"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_cancel_background"
            android:fontFamily="@font/comfortaa"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/yellow"
            android:textSize="14dp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>